# web-crawler-challenge

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
crawler/: __main__.py  crawler.py  crawlers.py  outputters.py
