[tool.poetry]
name = "web-crawler-challenge"
version = "0.1.0"
description = "Digesto-Jusbrasil web crawler challenge"
authors = ["Mateus Andrade <msn.mateus@hotmail.com>"]
packages = [
    { include = "crawler" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.5.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
